# eth_essentials

./: .gitignore  Cargo.toml  Makefile  README.md  diff
.github/workflows/: main.yaml
cairo_vm_hints/: Cargo.toml  TODO.txt
cairo_vm_hints/src/: hint_processor.rs  lib.rs  main.rs  mmr.rs  utils.rs
cairo_vm_hints/src/hint_processor/: mod.rs
cairo_vm_hints/src/hints/: bit_length_mmr.rs  bit_length_x.rs  get_bit_length.rs  mod.rs  print_var.rs  test_construct_mmr.rs  test_is_valid_mmr_size_generate_random.rs  test_is_valid_mmr_size_generate_sequential.rs  test_is_valid_mmr_size_print_1.rs  test_is_valid_mmr_size_print_2.rs
cairo_vm_hints/src/hints/lib/: bit_length.rs  mod.rs
cairo_vm_hints/src/hints/lib/block_header/: mod.rs
cairo_vm_hints/src/hints/lib/mmr/: bit_length.rs  left_child.rs  mod.rs  peak_values.rs
cairo_vm_hints/src/hints/lib/mpt/: mod.rs
cairo_vm_hints/src/hints/lib/rlp_little/: assert.rs  divmod.rs  leading_zeros.rs  mod.rs  nibbles.rs
cairo_vm_hints/src/hints/lib/utils/: assert.rs  carry.rs  divmod.rs  mod.rs  trailing_zeroes.rs  write.rs
cairo_vm_hints/src/hints/tests/: construct_mmr.rs  dw_hack.rs  encode_packed_256.rs  mmr_size_generate.rs  mod.rs  print.rs
cairo_vm_hints/src/tests/: construct_mmr.rs  dw_hack.rs  encode_packed_256.rs  is_valid_mmr_size.rs  mod.rs
lib/: block_header.cairo  mmr.cairo  mpt.cairo  rlp_little.cairo  utils.cairo
src/libs/: mpt.cairo
tests/cairo_programs/: bit_length.cairo  construct_mmr_test.cairo  dw_hack_test.cairo  extract_block_number_test.cairo  extract_bytes_test.cairo  extract_state_root_test.cairo  height_test.cairo  is_valid_mmr_size.cairo  mpt_prove_EOA_test.cairo  mpt_verify.cairo  peaks_test.cairo  reverse_uint256.cairo  uint256.cairo
tests/cairo_programs/fixtures/: mpt_variable_key_len.json
tests/fuzzing/: mpt.cairo
tests/fuzzing/fixtures/: mpt_proofs_0.json  mpt_proofs_1.json  mpt_proofs_10.json  mpt_proofs_100.json  mpt_proofs_101.json  mpt_proofs_102.json  mpt_proofs_103.json  mpt_proofs_104.json  mpt_proofs_105.json  mpt_proofs_106.json  mpt_proofs_107.json  mpt_proofs_108.json  mpt_proofs_109.json  mpt_proofs_11.json  mpt_proofs_110.json  mpt_proofs_111.json  mpt_proofs_112.json  mpt_proofs_113.json  mpt_proofs_114.json  mpt_proofs_115.json  mpt_proofs_116.json  mpt_proofs_117.json  mpt_proofs_118.json  mpt_proofs_119.json  mpt_proofs_12.json  mpt_proofs_120.json  mpt_proofs_121.json  mpt_proofs_122.json  mpt_proofs_123.json  mpt_proofs_124.json  mpt_proofs_125.json  mpt_proofs_126.json  mpt_proofs_127.json  mpt_proofs_128.json  mpt_proofs_129.json  mpt_proofs_13.json  mpt_proofs_130.json  mpt_proofs_131.json  mpt_proofs_132.json  mpt_proofs_133.json  (+148 more)
tests/python/: test_poseidon_hash_block.py  test_verify_getproof.py
tests/rust/: Cargo.toml
tests/rust/src/: main.rs
tools/make/: build.sh  cairo_format_check.sh  cairo_tests.sh  ci_local.sh  format_cairo_files.sh  fuzzer.sh  launch_cairo_files.py  requirements.txt  setup.sh
tools/py/: fetch_block_headers.py  hints.py  mmr.py  utils.py
