[workspace]
resolver = "2"

members = ["cairo_vm_hints"]

[workspace.dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["serde"]}
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
sha3 = "0.10"
starknet-crypto = "0.7.4"
starknet-types-core = "0.1.7"
thiserror = "2.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }