[workspace]
resolver = "2"

members = ["cairo_vm_hints"]


[workspace.dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["serde"]}
# Unify to the local cairo-vm checkout to avoid duplicate crate instances and API mismatches
cairo-vm = { path = "/home/kiki/Documents/HERODOTUS/cairo-vm/vm", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
clap = { version = "4.3.10", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8"
sha3 = "0.10.8"
starknet-crypto = "0.8.1"
starknet-types-core = "0.2.3"
thiserror = "1.0.64"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }