[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eth-trie-proofs = { git = "https://github.com/HerodotusDev/eth-trie-proofs.git", branch = "main" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
tokio = { version = "1", features = ["full"] }
alloy-primitives = "0.6.4"
reqwest = "0.11.27"
alloy-rlp = "0.3.4"
serde = "1.0.197"
serde_with = { version = "3.7.0", features = ["hex"] }
serde_json = "1.0.114"
rand = "0.8.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }